--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <title>Prototype</title>
     <link rel="icon" href="img/favicon.ico">
     <meta name="theme-color" content="#5CBFAD" />
-    <link rel="stylesheet" href="/scss/main.min.css">
-    <link rel="preload" href="/fonts/JosefinSans-Medium.ttf" as="font" type="font/ttf" crossorigin />
-    <link rel="preload" href="/fonts/Roboto-Regular.ttf" as="font" type="font/ttf" crossorigin />
-    <link rel="preload" href="/fonts/Roboto-Light.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="stylesheet" href="./scss/main.min.css">
+    <link rel="preload" href="./fonts/JosefinSans-Medium.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="./fonts/Roboto-Regular.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="./fonts/Roboto-Light.ttf" as="font" type="font/ttf" crossorigin />
 </head>
 
 <body>
@@ -978,9 +978,9 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="/js/modernizr-custom.js"></script>
-    <script src="/js/script.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/modernizr-custom.js"></script>
+    <script src="./js/script.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
