--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Webdesign, AleDevX, Bootstrap 5">
     <meta property="og:title" content="PROTOTYPE" />
-    <meta property="og:description" content="Webdesign, AleDevX, Bootstrap 5" />
+    <meta property="og:description" content="Projeto estudo Bootstrap 5" />
     <meta property="og:type" content="WEBSITES" />
     <meta property="og:image" content="https://aledevsx.github.io/projectPrototype/img/template.jpg" />
     <meta property="og:image:width" content="800" />
