--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                 <div class="icon rounded-1 d-flex align-items-end justify-content-center position-relative"
                     style="background-color: #3f8cf4; width:25px; height:25px;">
                     <a href="#!" aria-label="facebook" class="stretched-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.15rem;vertical-align: text-top;"
+                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.15rem;vertical-align:-0.20rem;"
                             viewBox="0 0 320 512">
 
                             <path
@@ -766,7 +766,7 @@
                 <div class="icon rounded-1 d-flex align-items-end justify-content-center position-relative"
                     style="background-color: #25a5da; width:25px; height:25px;">
                     <a href="#!" aria-label="twitter" class="stretched-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.10rem;vertical-align: text-top;"
+                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.10rem;vertical-align:-0.17rem;"
                             viewBox="0 0 512 512">
 
                             <path
@@ -778,7 +778,7 @@
                 <div class="icon rounded-1 d-flex align-items-end justify-content-center position-relative"
                     style="background-color: #d54b3f; width:25px; height:25px;">
                     <a href="#!" aria-label="google" class="stretched-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.05rem;vertical-align: text-top;"
+                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.05rem;vertical-align:-0.13rem;"
                             viewBox="0 0 488 512">
 
                             <path
@@ -790,7 +790,7 @@
                 <div class="icon rounded-1 d-flex align-items-end justify-content-center position-relative"
                     style="background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%), radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%), radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent), linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);width:25px; height:25px;">
                     <a href="#!" aria-label="instagram" class="stretched-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.25rem;vertical-align:top;"
+                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.25rem;vertical-align:-0.25rem;"
                             viewBox="0 0 448 512">
 
                             <path
@@ -802,7 +802,7 @@
                 <div class="icon rounded-1 d-flex align-items-end justify-content-center position-relative"
                     style="background-color: #0174b0; width:25px; height:25px;">
                     <a href="#!" aria-label="linkedin" class="stretched-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.05rem;vertical-align: text-top;"
+                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.05rem;vertical-align:-0.12rem;"
                             viewBox="0 0 448 512">
 
                             <path
@@ -814,7 +814,7 @@
                 <div class="icon rounded-1 bg-dark d-flex align-items-end justify-content-center position-relative"
                     style="width:25px; height:25px;">
                     <a href="#!" aria-label="github" class="stretched-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.15rem; vertical-align: text-bottom;"
+                        <svg xmlns="http://www.w3.org/2000/svg" style="height: 1.15rem;vertical-align:-0.17rem;"
                             viewBox="0 0 496 512">
 
                             <path
