--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
         <section
             class="container pb-55 d-flex justify-content-center justify-content-lg-between p-4 border-info border-bottom">
             <div class="me-5 d-none d-lg-block">
-                <h6 class="fs-8"><svg xmlns="http://www.w3.org/2000/svg" class="me-2" style="height:.938rem;"
+                <h6 class="fs-8"><svg xmlns="http://www.w3.org/2000/svg" class="me-2" style="height:.938rem;vertical-align: -0.1rem;"
                         viewBox="0 0 512 512">
 
                         <path
