--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                     </div>
                     <div class="col-6 col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                         <h3 class="text-dark mb-4">PRODUCTS</h3>
-                        <p><svg xmlns="http://www.w3.org/2000/svg" class="me-1" style="height:.813rem;"
+                        <p><svg xmlns="http://www.w3.org/2000/svg" class="me-1" style="height:.813rem;vertical-align: -0.1rem;"
                                 viewBox="0 0 448 512">
 
                                 <path
