--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Webdesign, AleDevX, Bootstrap 5">
-    <meta property="og:title" content="PROTOTYPE" />
-    <meta property="og:description" content="Projeto estudo Bootstrap 5" />
-    <meta property="og:type" content="WEBSITES" />
-    <meta property="og:image" content="https://aledevsx.github.io/projectPrototype/img/template.jpg" />
-    <meta property="og:image:width" content="800" />
-    <meta property="og:image:height" content="600" />
-    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:title" content="PROTOTYPE">
+    <meta property="og:description" content="Projeto estudo Bootstrap 5">
+    <meta property="og:type" content="WEBSITES">
+    <meta property="og:image" content="https://aledevsx.github.io/projectPrototype/img/template.jpg">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="600">
+    <meta property="og:image:type" content="image/jpg">
     <title>Prototype</title>
     <link rel="icon" href="img/favicon.ico">
-    <meta name="theme-color" content="#5CBFAD" />
+    <meta name="theme-color" content="#5CBFAD">
     <link rel="stylesheet" href="./scss/main.min.css">
-    <link rel="preload" href="./fonts/JosefinSans-Medium.ttf" as="font" type="font/ttf" crossorigin />
-    <link rel="preload" href="./fonts/Roboto-Regular.ttf" as="font" type="font/ttf" crossorigin />
-    <link rel="preload" href="./fonts/Roboto-Light.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="./fonts/JosefinSans-Medium.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="./fonts/Roboto-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="./fonts/Roboto-Light.ttf" as="font" type="font/ttf" crossorigin>
 </head>
 
 <body>
@@ -208,7 +208,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/img-1.webp">
                         <source type="image/jpeg" srcset="./img/img-1.jpg">
-                        <img src="./img/img-1.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="" />
+                        <img src="./img/img-1.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="">
                     </picture>
                     <div class="d-grid">
                         <button type="button"
@@ -217,7 +217,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/img-2.webp">
                         <source type="image/jpeg" srcset="./img/img-2.jpg">
-                        <img src="./img/img-2.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="" />
+                        <img src="./img/img-2.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="">
                     </picture>
                     <div class="d-grid">
                         <button type="button"
@@ -230,7 +230,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/img-3.webp">
                         <source type="image/jpeg" srcset="./img/img-3.jpg">
-                        <img src="./img/img-3.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="" />
+                        <img src="./img/img-3.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="">
                     </picture>
                     <div class="d-grid">
                         <button type="button"
@@ -239,7 +239,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/img-4.webp">
                         <source type="image/jpeg" srcset="./img/img-4.jpg">
-                        <img src="./img/img-4.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="" />
+                        <img src="./img/img-4.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="">
                     </picture>
                     <div class="d-grid">
                         <button type="button"
@@ -252,7 +252,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/img-5.webp">
                         <source type="image/jpeg" srcset="./img/img-5.jpg">
-                        <img src="./img/img-5.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="" />
+                        <img src="./img/img-5.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="">
                     </picture>
                     <div class="d-grid">
                         <button type="button"
@@ -261,7 +261,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/img-6.webp">
                         <source type="image/jpeg" srcset="./img/img-6.jpg">
-                        <img src="./img/img-6.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="" />
+                        <img src="./img/img-6.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="">
                     </picture>
                     <div class="d-grid">
                         <button type="button" class="btn rounded-0 btn-primary shadow-sm fs-7 text-dark">DESIGN</button>
@@ -273,7 +273,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/img-7.webp">
                         <source type="image/jpeg" srcset="./img/img-7.jpg">
-                        <img src="./img/img-7.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="" />
+                        <img src="./img/img-7.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="">
                     </picture>
                     <div class="d-grid">
                         <button type="button"
@@ -282,7 +282,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/img-8.webp">
                         <source type="image/jpeg" srcset="./img/img-8.jpg">
-                        <img src="./img/img-8.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="" />
+                        <img src="./img/img-8.jpg" width="508" height="336" class="img-fluid shadow-sm" alt="">
                     </picture>
                     <div class="d-grid">
                         <button type="button"
@@ -298,7 +298,7 @@
                         <picture>
                             <source type="image/webp" srcset="./img/mark-3.webp">
                             <source type="image/jpeg" srcset="./img/mark-3.jpg">
-                            <img src="./img/mark-3.jpg" width="508" height="381" class="img-fluid shadow-sm" alt="" />
+                            <img src="./img/mark-3.jpg" width="508" height="381" class="img-fluid shadow-sm" alt="">
                         </picture>
                         <div class="d-grid">
                             <button type="button"
@@ -307,7 +307,7 @@
                         <picture>
                             <source type="image/webp" srcset="./img/mark-4.webp">
                             <source type="image/jpeg" srcset="./img/mark-4.jpg">
-                            <img src="./img/mark-4.jpg" width="508" height="381" class="img-fluid shadow-sm" alt="" />
+                            <img src="./img/mark-4.jpg" width="508" height="381" class="img-fluid shadow-sm" alt="">
                         </picture>
                         <div class="d-grid">
                             <button type="button"
@@ -318,7 +318,7 @@
                         <picture>
                             <source type="image/webp" srcset="./img/mark-1.webp">
                             <source type="image/jpeg" srcset="./img/mark-1.jpg">
-                            <img src="./img/mark-1.jpg" width="508" height="381" class="img-fluid shadow-sm" alt="" />
+                            <img src="./img/mark-1.jpg" width="508" height="381" class="img-fluid shadow-sm" alt="">
                         </picture>
                         <div class="d-grid">
                             <button type="button"
@@ -327,7 +327,7 @@
                         <picture>
                             <source type="image/webp" srcset="./img/mark-2.webp">
                             <source type="image/jpeg" srcset="./img/mark-2.jpg">
-                            <img src="./img/mark-2.jpg" width="508" height="381" class="img-fluid shadow-sm" alt="" />
+                            <img src="./img/mark-2.jpg" width="508" height="381" class="img-fluid shadow-sm" alt="">
                         </picture>
                         <div class="d-grid">
                             <button type="button"
